--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>your life , a photo</h1>
                 <p>print your life in a simple photo</p>
                 <div class="buttons">
-                    <a href="#">Get started</a>
+                    <a href="#">Get started11</a>
                 </div>
             </div>
 
