--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
         </section>
 
         <section class="container3">
-            ДОМА
+            <div class="images1">
+                <img src="./img/your_screen.png">
+                
+            </div>
+            <div class="text_right">
+                Text
+            </div>
         </section>
 
         <section class="container6">
