--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section class="container3">
+       <!--  <section class="container3">
             <div class="images1">
                 <img src="./img/your_screen.png">
                 
@@ -63,7 +63,7 @@
             <div class="text_right">
                 Text
             </div>
-        </section>
+        </section> -->
 
         <section class="container6">
             <h2>Download it</h2>
@@ -79,7 +79,7 @@
             <!--Новая информация с использования иконок из fontawesome-->
 
             <div class="two_buttons">
-                <a href="#" class="apple">Apple Store<i class="fab fa-apple"></i></a>
+                <a href="#" class="apple">Apple Store<i class="fas fa-phone-square"></i></a>
                 <a href="#" class="android">Play Store<i class="fab fa-android"></i></a>
             </div>
 
